force-app/main/default/objects/Suggested_Reviewer__c/Suggested_Reviewer__c.object-meta.xml
<CustomObject>
    <description>Suggested Reviewer/Restricted Reviewer</description>
    <label>Suggested Reviewer</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>