force-app/main/default/objects/Suggested_Reviewer__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>