force-app/main/default/objects/Suggested_Reviewer__c/fields/Area_of_expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_of_expertise__c</fullName>
    <description>Area of expertise</description>
    <inlineHelpText>Area of expertise</inlineHelpText>
    <label>Area of expertise</label>
    <type>TextArea</type>
</CustomField>