force-app/main/default/objects/Suggested_Reviewer__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Suggested Reviewers</relationshipLabel>
    <relationshipName>Suggested_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>