force-app/main/default/objects/Suggested_Reviewer__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for being appropriate/Reason for restriction.</description>
    <inlineHelpText>Reason for being appropriate/Reason for restriction.</inlineHelpText>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>