force-app/main/default/objects/Suggested_Reviewer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affiliation__c</columns>
    <columns>Email__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Type__c</columns>
    <columns>SL_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>